Updates and reorgansiation of last three chapters

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,12 +1,12 @@
 \chapter{Modelling landscape evolution}
-\label{LEMs}
+\label{chapter_landscape_evol}
 
 \section{Introduction}
 Landscape evolution models (LEMs) are quantitative tools used to simulate Earth surface processes and the evolution of the land surface. LEMs can be used to deduce whether hypotheses about landscape evolution are likely to be valid, by making quantitative predictions about their development. The earliest LEMs were conceptual and largely qualitative, such as the early pictorial landscape evolution diagrams by Gilbert (1880), Figure 1a. Gilbert’s model contains many of the key components in a modern LEM. The background schematic depicts the effect of an uplift field alone on the landscape, and the foreground depicts the combined effects of uplift and erosion. Gilbert also recognised the important concept of boundary conditions in LEMs, stating that the base of the diagram represents a fixed sea-level in this case.  These early models offered insight into the potential course of landscape evolution, and sowed the seeds for the later development of LEMs that abound today. In Figure 1b, a computer-based LEM (CHILD, Tucker et al. 2001) is shown, with the components of boundary conditions, uplift, and other process representations that are still core concepts in modern LEMs. The advent of computerised, numerical LEMs, such as those in Figure 1b, along with high-resolution digital topographic data provide important quantitative tools for investigating landscape process and form. 
 
-\includegraphics[width=7.86cm,height=4.217cm]{LEMFinalRevisedmanuscriptDAVFinalrevisions-img/LEMFinalRevisedmanuscriptDAVFinalrevisions-img001.png} 
+\includegraphics[width=7.86cm]{LEMFinalRevisedmanuscriptDAVFinalrevisions-img/LEMFinalRevisedmanuscriptDAVFinalrevisions-img001.png} 
 
-\includegraphics[width=7.883cm,height=4.768cm]{LEMFinalRevisedmanuscriptDAVFinalrevisions-img/LEMFinalRevisedmanuscriptDAVFinalrevisions-img002.png} 
+\includegraphics[width=7.883cm]{LEMFinalRevisedmanuscriptDAVFinalrevisions-img/LEMFinalRevisedmanuscriptDAVFinalrevisions-img002.png} 
 
 Figure 1. The evolution of LEMs. (a) The diagrammatic LEM of Gilbert (1880) compared to (b) a computer numerical model (CHILD, Tucker et al. 2001). 
 
