--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,8 +1,16 @@
-\chapter{Meteorological data and models}
+\chapter{Rainfall data and models}
 \label{MetData}
 
+%%%%%%%%%%%%%%%%
+% TO DO
+% 
+% Figures of total rainfall accumulation over catcments
+% Zoomed in location maps
+%
+%%%%%%%%%%%%%%%%
+
 \section{Introduction}
-This chapter discusses the various sources of meteorological data and numerical models used to generate rainfall input to the landscape evolution models discussed in Chapters \ref{LEMs} and \ref{RainfallInLEMs}. In this thesis, two sources of rainfall data were used to drive the hydrological inputs of landscape evolution models: precipitation radar data from the UK 1km rainfall radar composite product (Section \ref{NIMROD}) and rainfall outputs from a numerical weather prediction model (Section \ref{WRF}
+This chapter discusses the various sources of meteorological data and numerical models used to generate rainfall input to the landscape evolution models discussed in Chapters \ref{chapter_landscape_evol} and \ref{RainfallInLEMs}. In this thesis, two sources of rainfall data were used to drive the hydrological inputs of landscape evolution models: precipitation radar data from the UK 1km rainfall radar composite product (Section \ref{NIMROD}) and rainfall outputs from a numerical weather prediction model (Section \ref{WRF}
 
 \section{Rainfall radar - the UK 1km Radar Composite Product}
 \label{NIMROD}
