--- a/introduction.tex
+++ b/introduction.tex
@@ -1,3 +1,9 @@
 \chapter{Introduction}
-\label{Intro}
+\label{chapter_intro}
+
+%\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
+%``Begin at the beginning,'' the King said, gravely, ``and go on till you
+%come to an end; then stop.''
+%\end{chapquote}
+
 \textit{This chapter introduces the topic in a broad setting within the context of landscape evolution under different climatic conditions and meteorology (rainfall spatial patterns). The topic is discussed in its historic context as well briefly. It then goes on to clarify the topic of interest, and relates it to both topical research questions in landscape evolution theory and also the societal impact of intense, erosive rainfall events on the landscape.}
