--- a/literature.bib
+++ b/literature.bib
@@ -2945,22 +2945,294 @@ year = {2002}
 }
 @book{wallingford2005flooding,
   title={Flooding in Boscastle and North Cornwall, August 2004. Phase 2 studies report},
-  author={Wallingford, HR},
+  author={{HR Wallingford}},
   year={2005},
   publisher={HR Wallingford}
 }
-
-
-
-
-
-
-
-
-
-
-
-
+@article{newson1980geomorphological,
+  title={The geomorphological effectiveness of floods—a contribution stimulated by two recent events in mid-wales},
+  author={Newson, Malcolm},
+  journal={Earth Surface Processes},
+  volume={5},
+  number={1},
+  pages={1--16},
+  year={1980},
+  publisher={Wiley Online Library}
+}
+@article{baynes2015erosion,
+  title={Erosion during extreme flood events dominates Holocene canyon evolution in northeast Iceland},
+  author={Baynes, Edwin RC and Attal, Mika{\"e}l and Niedermann, Samuel and Kirstein, Linda A and Dugmore, Andrew J and Naylor, Mark},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={8},
+  pages={2355--2360},
+  year={2015},
+  publisher={National Acad Sciences}
+}
+@article{gupta2007catastrophic,
+  title={Catastrophic flooding origin of shelf valley systems in the English Channel},
+  author={Gupta, Sanjeev and Collier, Jenny S and Palmer-Felgate, Andy and Potter, Graeme},
+  journal={Nature},
+  volume={448},
+  number={7151},
+  pages={342--345},
+  year={2007},
+  publisher={Nature Publishing Group}
+}
+@article{lamb2010rapid,
+  title={Rapid formation of a modern bedrock canyon by a single flood event},
+  author={Lamb, Michael P and Fonstad, Mark A},
+  journal={Nature Geoscience},
+  volume={3},
+  number={7},
+  pages={477--481},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+@article{anton2015exceptional,
+  title={Exceptional river gorge formation from unexceptional floods},
+  author={Anton, L and Mather, AE and Stokes, M and Mu{\~n}oz-Martin, Alfonso and De Vicente, G},
+  journal={Nature communications},
+  volume={6},
+  year={2015},
+  publisher={Nature Research}
+}
+@article{coulthard1998non,
+  title={Non-linearity and spatial resolution in a cellular automaton model of a small upland basin},
+  author={Coulthard, Thomas J and Kirkby, Michael J and Macklin, Mark G},
+  journal={Hydrology and Earth System Sciences},
+  volume={2},
+  number={2/3},
+  pages={257--264},
+  year={1998},
+  publisher={Copernicus GmbH}
+}
+@article{turowski2011start,
+  title={Start and end of bedload transport in gravel-bed streams},
+  author={Turowski, Jens M and Badoux, Alexandre and Rickenmann, Dieter},
+  journal={Geophysical Research Letters},
+  volume={38},
+  number={4},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+@article{turowski2013large,
+  title={Large floods, alluvial overprint, and bedrock erosion},
+  author={Turowski, Jens M and Badoux, Alexandre and Leuzinger, James and Hegglin, Ramon},
+  journal={Earth Surface Processes and Landforms},
+  volume={38},
+  number={9},
+  pages={947--958},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+@incollection{weisman1986characteristics,
+  title={Characteristics of isolated convective storms},
+  author={Weisman, Morris L and Klemp, Joseph B},
+  booktitle={Mesoscale meteorology and forecasting},
+  pages={331--358},
+  year={1986},
+  publisher={Springer}
+}
+@article{vonhardenberg2003shape,
+  title={The shape of convective rain cells},
+  author={{Von Hardenberg}, J and Ferraris, L and Provenzale, A},
+  journal={Geophysical research letters},
+  volume={30},
+  number={24},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+@article{hergarten2014extracting,
+  title={Extracting topographic swath profiles across curved geomorphic features},
+  author={Hergarten, S and Robl, J and St{\"u}we, K},
+  journal={Earth Surface Dynamics},
+  volume={2},
+  number={1},
+  pages={97},
+  year={2014},
+  publisher={Copernicus GmbH}
+}
+@article{galiatsatos2007assessment,
+  title={Assessment of sediment delivery from shallow landslides in upland terrain using 3D remote sensing},
+  author={Galiatsatos, N and Donoghue, DNM and Warburton, L},
+  journal={RSPSoc2007: Challenges for earth observation--scientific, technical and commercial, Newcastle, UK},
+  year={2007}
+}
+@article{warburton2004hydrological,
+  title={Hydrological controls of surficial mass movements in peat},
+  author={Warburton, Jeff and Holden, Joseph and Mills, Andrew J},
+  journal={Earth-Science Reviews},
+  volume={67},
+  number={1},
+  pages={139--156},
+  year={2004},
+  publisher={Elsevier}
+}
+@article{roca2010two,
+  title={Two dimensional model analysis of flash-flood processes: application to the Boscastle event},
+  author={Roca, M and Davison, M},
+  journal={Journal of Flood Risk Management},
+  volume={3},
+  number={1},
+  pages={63--71},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+@article{schoorl2000three,
+  title={Three-dimensional landscape process modelling: the effect of DEM resolution},
+  author={Schoorl, JM and Sonneveld, MPW and Veldkamp, A and others},
+  journal={Earth Surface Processes and Landforms},
+  volume={25},
+  number={9},
+  pages={1025--1034},
+  year={2000}
+}
+@article{claessens2005resolution,
+  title={DEM resolution effects on shallow landslide hazard and soil redistribution modelling},
+  author={Claessens, L and Heuvelink, GBM and Schoorl, JM and Veldkamp, A},
+  journal={Earth Surface Processes and Landforms},
+  volume={30},
+  number={4},
+  pages={461--477},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+@article{haile2005effects,
+  title={Effects of LiDAR DEM resolution in flood modelling: a model sensitivity study for the city of Tegucigalpa, Honduras},
+  author={Haile, Alemseged Tamiru and Rientjes, THM},
+  journal={Workshop on Laser scanning 2005, Enschede, the Netherlands, September 12-14, 2005},
+  volume={3},
+  year={2005}
+}
+@article{zhang2008effects,
+  title={Effects of DEM resolution and source on soil erosion modelling: a case study using the WEPP model},
+  author={Zhang, Jane Xinxin and Chang, Kang-Tsung and Wu, Joan Qiong},
+  journal={International Journal of Geographical Information Science},
+  volume={22},
+  number={8},
+  pages={925--942},
+  year={2008},
+  publisher={Taylor \& Francis}
+}
+@article{chang1991effect,
+  title={The effect of DEM resolution on slope and aspect mapping},
+  author={Chang, Kang-tsung and Tsai, Bor-wen},
+  journal={Cartography and geographic information systems},
+  volume={18},
+  number={1},
+  pages={69--77},
+  year={1991},
+  publisher={Taylor \& Francis}
+}
+@article{andreassian2004waters,
+  title={Waters and forests: from historical controversy to scientific debate},
+  author={Andr{\'e}assian, Vazken},
+  journal={Journal of hydrology},
+  volume={291},
+  number={1},
+  pages={1--27},
+  year={2004},
+  publisher={Elsevier}
+}
+@article{darby1999effect,
+  title={Effect of riparian vegetation on flow resistance and flood potential},
+  author={Darby, Stephen E},
+  journal={Journal of Hydraulic Engineering},
+  volume={125},
+  number={5},
+  pages={443--454},
+  year={1999},
+  publisher={American Society of Civil Engineers}
+}
+@article{hollis1975effect,
+  title={The effect of urbanization on floods of different recurrence interval},
+  author={Hollis, GE},
+  journal={Water Resources Research},
+  volume={11},
+  number={3},
+  pages={431--435},
+  year={1975},
+  publisher={Wiley Online Library}
+}
+@article{bradshaw2007global,
+  title={Global evidence that deforestation amplifies flood risk and severity in the developing world},
+  author={Bradshaw, Corey JA and Sodhi, Navjot S and PEH, KELVIN S-H and Brook, Barry W},
+  journal={Global Change Biology},
+  volume={13},
+  number={11},
+  pages={2379--2395},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+@article{gippel1995environmental,
+  title={Environmental hydraulics of large woody debris in streams and rivers},
+  author={Gippel, Christopher J},
+  journal={Journal of Environmental Engineering},
+  volume={121},
+  number={5},
+  pages={388--395},
+  year={1995},
+  publisher={American Society of Civil Engineers}
+}
+@article{jeffries2003influence,
+  title={The influence of vegetation and organic debris on flood-plain sediment dynamics: case study of a low-order stream in the New Forest, England},
+  author={Jeffries, Richard and Darby, Stephen E and Sear, David A},
+  journal={Geomorphology},
+  volume={51},
+  number={1},
+  pages={61--80},
+  year={2003},
+  publisher={Elsevier}
+}
+@article{berthet2009crucial,
+  title={How crucial is it to account for the antecedent moisture conditions in flood forecasting? Comparison of event-based and continuous approaches on 178 catchments},
+  author={Berthet, L and Andr{\'e}assian, V and Perrin, C and Javelle, P},
+  journal={Hydrology and Earth System Sciences Discussions},
+  number={13},
+  pages={p--819},
+  year={2009}
+}
+@article{wilson1979influence,
+  title={On the influence of the spatial distribution of rainfall on storm runoff},
+  author={Wilson, Charles B and Valdes, Juan B and Rodriguez-Iturbe, Ignacio},
+  journal={Water Resources Research},
+  volume={15},
+  number={2},
+  pages={321--328},
+  year={1979},
+  publisher={Wiley Online Library}
+}
+@article{krajewski1991monte,
+  title={A Monte Carlo study of rainfall sampling effect on a distributed catchment model},
+  author={Krajewski, Witold F and Lakshmi, Venkataraman and Georgakakos, Konstantine P and Jain, Subhash C},
+  journal={Water resources research},
+  volume={27},
+  number={1},
+  pages={119--128},
+  year={1991},
+  publisher={Wiley Online Library}
+}
+@article{segond2007simulation,
+  title={Simulation and spatio-temporal disaggregation of multi-site rainfall data for urban drainage applications},
+  author={Segond, Marie-Laure and Neokleous, Natasa and Makropoulos, Christos and Onof, Christian and Maksimovic, Cedo},
+  journal={Hydrological Sciences Journal},
+  volume={52},
+  number={5},
+  pages={917--935},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+@article{gabellani2007propagation,
+  title={Propagation of uncertainty from rainfall to runoff: A case study with a stochastic rainfall generator},
+  author={Gabellani, S and Boni, G and Ferraris, L and Von Hardenberg, J and Provenzale, A},
+  journal={Advances in water resources},
+  volume={30},
+  number={10},
+  pages={2061--2071},
+  year={2007},
+  publisher={Elsevier}
+}
 
 
 
