--- a/thesis.tex
+++ b/thesis.tex
@@ -9,7 +9,7 @@
 \documentclass[12pt,oneside,PhD]{muthesis}
 
 % Use this command to output a single chapter
-%\includeonly{chapter6,chapter7}
+%\includeonly{chapter_events,chapter6,chapter7}
 %\includeonly{chapter2}
 
 \usepackage{rotating}
@@ -85,8 +85,6 @@
 %=-=-=-=-=-=-=-=-=-=
 % RESULTS AND INTERPRETATION
 %=-=-=-=-=-=-=-=-=-=
-
-\include{chapter_events}
 
 % Chapter 6 describes a case study test of using the model with hi res rainfall
 % radar data
