--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -2,8 +2,8 @@
 
 \author{Declan A. Valters}
 % Faculty of Life Sciences people should comment the next line out
-\school{Earth, Atmospheric, and Environmental Sciences}
-\faculty{Engineering and Physical Sciences}
+\school{Earth and Environmental Sciences}
+\faculty{Science and Engineering}
 \def\wordcount{xxxxx}
 
 % Uncomment the line below to suppress the `List of Tables' page (optional)
